# NotionToAnki

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: anki_uploader.py  flash_card_generator.py
