[tool.poetry]
name = "notiontoanki"
version = "0.1.0"
description = ""
authors = ["Anirudh Srinivasan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
google-generativeai = "^0.8.3"
wemake-python-styleguide = "^0.19.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
